<resources>
    <string name="app_name">Pizza Driver</string>
    <string name="title_activity_main">Pizza Driver</string>
    <!-- Strings used for fragments for navigation -->

    <string name="zero_dot_zero_zero_text">0.00</string>
    <string name="zero_text">0</string>

    <string name="enter_order_number">Enter order number</string>
    <string name="summary">Summary</string>

    <string name="order_number">Order Number</string>
    <string name="credit_auto">Credit Auto</string>
    <string name="credit_manual">Credit Manual</string>
    <string name="cash">Cash</string>
    <string name="grubhub">Grubhub</string>
    <string name="levelup">LevelUp</string>
    <string name="other">Other</string>
    <string name="tip">Tip: $</string>
    <string name="cash_boolean">Cash?</string>
    <string name="order_total">Order Total: $</string>
    <string name="cash_received">Cash Received: $</string>
    <string name="tracy">Tracy</string>
    <string name="mountain_house">Mountain House</string>
    <string name="save">Save</string>

    <string name="tips">TIPS</string>
    <string name="tips_credit">Tips Credit:</string>
    <string name="tips_cash">Tips Cash:</string>
    <string name="tips_total">Tips Total:</string>
    <string name="reimbursement">REIMBURSEMENT</string>
    <string name="reimbursement_total">Reimbursement Total:</string>
    <string name="compensation_total">Compensation Total:</string>
    <string name="cash_orders">CASH ORDERS</string>
    <string name="cash_orders_total">Cash Orders Total:</string>
    <string name="net_cash">Net Cash:</string>
    <string name="orders_count">ORDERS COUNT</string>
    <string name="credit_auto_text">Credit Auto:</string>
    <string name="credit_manual_text">Credit Manual:</string>
    <string name="credit_manual_cash_text">Credit Manual Cash:</string>
    <string name="cash_text">Cash:</string>
    <string name="grubhub_text">Grubhub:</string>
    <string name="level_up_text">LevelUp:</string>
    <string name="other_text">Other:</string>
    <string name="total">Total:</string>
    <string name="tracy_text">Tracy:</string>
    <string name="mountain_house_text">Mountain House:</string>

    <string name="number">Number</string>
    <string name="type">Type</string>
    <string name="tip_text">Tip</string>
    <string name="location">Location</string>

    <string name="back_to_order_list">Back To Order List</string>
    <string name="clear_data">Clear Data</string>
    <string name="delete">Delete order</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="more">more</string>
    <string name="add_description">Add new order number</string>
    <string name="change_order_number">Change order number</string>
    <string name="add_location">Add Location</string>
    <string name="address_name">Name</string>
    <string name="delete_location">Delete Location</string>
    <string name="apt_space_unit">Apartment, Unit, Space?</string>
    <string name="tipping_type">Tipping Type</string>
    <string name="prefilled_notes">Prefilled notes</string>
    <string name="round_up">Round Up</string>
    <string name="no_tip">No Tip</string>
    <string name="round_down">Round Down</string>
    <string name="cash_tip">Cash Tip</string>
    <string name="good_tips">Good Tips</string>
    <string name="add_note">Add Note</string>
    <string name="add_apt_space_unit">Add Apt, Space, etc</string>
    <string name="back_to_list">Back to List</string>
    <string name="select_date">Select Date</string>
    <string name="map">Map</string>
    <string name="date_added">DateAdded</string>
    <string name="note">Note</string>

</resources>